--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,20 +13,45 @@ Lilás:#5f2c82 */
 body, html{
     background-color: #5f2c82 ;
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
 }
 main{
     position: relative;
     height: 100vh;
     width: 100vw;
-     
+      
 }
 section#login{
+
     position: absolute;
     top: 50%;
     left: 50%;
-background-color: white;
+    overflow: hidden;
+    background-color: white;
 width: 250px;
+border-radius: 20px;
 height: 500px;
 transform: translate(-50%,-50%);
+box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.467);
+
+  transition: width ,.3s,height, .3s;
+    transition-timing-function: ease;
+}
+section#login>div#imagem{
+    display: block;
+    background:#5f2c82 url(../imagens/metal.jpg) no-repeat;
+    height: 200px;
+    background-size: cover;
+    background-position: left bottom;
+}
+section#login > div#formulario{
+    display: block;
+padding: 10px;
+}
+div#formulario > h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+div#formulario > p{
+    font-size: 0.8em;
 }
