--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,7 +30,7 @@ section#login{
     background-color: white;
 width: 250px;
 border-radius: 20px;
-height: 500px;
+height: 515px;
 transform: translate(-50%,-50%);
 box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.467);
 
@@ -53,5 +53,51 @@ div#formulario > h1{
     margin-bottom: 10px;
 }
 div#formulario > p{
+    font-size: 0.8em;
+}
+form >div.campo{
+    background-color: #5f2c82;
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+div.campo > label{
+display: none;
+}
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color:#49a09d ;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+form > input[type=submit]{
+    background-color: #265250;
+}
+form > a.botao{
+    text-align: center;
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    color: #265250;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+    
+}
+form > a.botao.hover{
+    background-color: #63dbd7;
+}
+form > a.botao > span {
     font-size: 0.8em;
 }
