--- a/estilos/style.css
+++ b/estilos/style.css
@@ -60,11 +60,28 @@ form >div.campo{
     width: 100%;
     display: block;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 div.campo > label{
 display: none;
+}
+div.campo > span{
+    color: white;
+    background-color: black;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+div.campo >input{
+    background-color: #68e8e4;
+    font-size: 1em;
+    width:calc(100%-32px);
+    transform: translate(-44px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
 }
 form > input[type=submit]{
     display: block;
