--- a/estilos/style.css
+++ b/estilos/style.css
@@ -58,30 +58,37 @@ div#formulario > p{
 form >div.campo{
     background-color: #5f2c82;
     width: 100%;
-    display: block;
+    display: flex;
     height: 40px;
     border-radius: 8px;
     margin: 5px 0px;
+    align-items: center;
 }
 div.campo > label{
 display: none;
 }
+
 div.campo > span{
     color: white;
-    background-color: black;
-    font-size: 2em;
+    background-color: #5f2c82;
+    font-size: 1.2em;
     width: 40px;
-    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px 0 0 8px;
+
 }
 div.campo >input{
+    flex: 1;
     background-color: #68e8e4;
-    font-size: 1em;
-    width:calc(100%-32px);
-    transform: translate(-44px);
-    height: 100%;
-    border: 0px;
-    border-radius: 8px;
-    padding: 4px;
+    border: none;
+    outline: none;
+   font-size: 1em;
+   height: 100%;
+   padding-left: 8px;
+   border-radius: 0 8px 8px 0;
+   padding: 0 10px;
 }
 form > input[type=submit]{
     display: block;
